--- a/src/styles/sass/components/sidebar.scss
+++ b/src/styles/sass/components/sidebar.scss
@@ -3,13 +3,13 @@
 @use '../partials/responsive' as *;
 
 .sidebar {
-  width: 12%;
+  // width: 12%;
+  width: 40px;
   position: fixed;
   left: 0;
   top: 0;
   bottom: 0;
   z-index: 1;
-  max-width: 80px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -21,8 +21,21 @@
     bottom: $space_1;
   }
 
+  @include mobile {
+    width: 12%;
+    max-width: 40px;
+  }
+
+  @include tablet {
+    max-width: 60px;
+  }
+  @include desktop {
+    max-width: 80px;
+  }
+
   .logo-container {
     padding-top: $space_2;
+    width: 100%;
     @include tablet {
       width: 80%;
     }
@@ -33,9 +46,7 @@
     }
   }
 
-
-  
-  .social { 
+  .social {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,7 +71,7 @@
 
       &:hover span {
         color: $tertiary-color;
-        transform: scale(1.2); 
+        transform: scale(1.2);
       }
 
       .codewarsicon {
@@ -71,13 +82,19 @@
         }
       }
 
-      &:nth-child(1) { animation-delay: 600ms; }
-      &:nth-child(2) { animation-delay: 800ms; }
-      &:nth-child(3) { animation-delay: 1000ms; }
-      &:nth-child(4) { animation-delay: 1200ms; }
+      &:nth-child(1) {
+        animation-delay: 600ms;
+      }
+      &:nth-child(2) {
+        animation-delay: 800ms;
+      }
+      &:nth-child(3) {
+        animation-delay: 1000ms;
+      }
+      &:nth-child(4) {
+        animation-delay: 1200ms;
+      }
     }
-
-
   }
 }
 
