--- a/src/styles/sass/partials/_config.scss
+++ b/src/styles/sass/partials/_config.scss
@@ -9,6 +9,8 @@
 
 html {
   scroll-behavior: smooth;
+  height: 100%;
+  width: 100%;
   overflow-x: hidden !important;
 }
 
@@ -16,6 +18,8 @@ body {
   // @include mobile {
   //     background: $secondary-color;
   // }
+  // height: 100%;
+  width: 100%;
   font-size: 14px;
   @include tablet {
     font-size: 16px;
@@ -113,10 +117,14 @@ h3 {
   color: $tertiary-color;
   font-size: 16px;
   margin-bottom: $space_6;
+  @include tablet {
+    font-size: 22px;
+  }
 }
 
 .section-content {
   max-width: 1100px;
+  padding-left: $space_4;
   @include tablet {
     padding-top: $space_6;
     padding-bottom: $space_10;
@@ -138,7 +146,6 @@ h3 {
   // @include px($space_4);
   @include padding-x;
   border-top: 1px solid $border-color;
-
 }
 
 .box {
